# fastAPI-prime

./: .gitignore  README.md  alembic.ini  application.py  database.py  dependencies.py  main.py  middlewares.py  models.py  pydantic_models.py  pyproject.toml  schemas.py  settings.py  test_main.py  utils.py
.github/workflows/: fastapi.yml
alembic/: env.py
alembic/versions/: 386ed9ef5fbb_.py  ae1d416808a8_.py
migrations/models/: 0_20220223125947_init.sql  1_20220223130709_update.sql  1_20220224090046_update.sql
migrations/versions/: 0081abd91089_.py  7e3a490158f6_.py
modules/: __init__.py
modules/callbacs/: handlers.py  schemas.py
modules/events/: handlers.py
modules/graph_ql/: handlers.py
modules/items/: controllers.py  handlers.py  models.py  schemas.py
modules/pages/: handlers.py
modules/users/: controllers.py  handlers.py  models.py  schemas.py
modules/web_socket/: controllers.py  handlers.py  utils.py
routers/: __init__.py  graph_gl.py  items.py  users.py
static/: script.js
templates/: index.html
tests/: conftest.py  example_data.py  shortcuts.py  test_main.py
