[tool.poetry]
name = "fast"
version = "0.1.0"
description = ""
authors = ["bogdankozlovsky <bogdan.k@datarails.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.73.0"
uvicorn = "^0.17.4"
pydantic = {extras = ["email"], version = "^1.9.0"}
python-multipart = "^0.0.5"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pytest = "^7.0.1"
jose = "^1.0.0"
tortoise-orm = {extras = ["asyncpg"], version = "^0.18.1"}
aerich = "^0.6.2"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]


[tool.aerich]
tortoise_orm = "settings.TORTOISE_ORM_DEV"
location = "./migrations"
src_folder = "./."
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
